# pybind11_example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  reader.py
callable_property/: CMakeLists.txt  session.cpp  session.py
inheritance/: CMakeLists.txt  reader.cpp  reader.py
inherited_property/: CMakeLists.txt  proxy_session.cpp  proxy_session.py
